// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupCell should not render hide prop is given 1`] = `
.c1 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c0 {
  display: grid;
  opacity: 0;
  width: 0px;
  height: 0px;
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
    >
      Dummy
    </span>
  </div>
</div>
`;

exports[`GroupCell should render GroupCellTitle properly 1`] = `
.c1 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c0 {
  font-size: 14px;
  font-weight: 400;
  font-size: 16px;
  font-weight: 700;
  text-align: center;
  padding: 5px 0px 5px 10px;
  grid-column: -1/1;
  text-overflow: initial;
  overflow: auto;
  white-space: normal;
  border-right: 1px solid #E0E0E0;
  border-bottom: 1px solid #E0E0E0;
}

<div>
  <span
    class="c0"
  >
    <span
      class="c1"
    >
      Dummy
    </span>
  </span>
</div>
`;

exports[`GroupCell should render properly 1`] = `
.c1 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c0 {
  display: grid;
  opacity: 1;
  width: 100%;
  height: 100%;
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
    >
      Dummy
    </span>
  </div>
</div>
`;
